# CKR_BOT

./: .gitattributes  .gitignore  CLAUDE.md  README.md  build_exe.py  ckrbot.spec  config.yaml  pyproject.toml  requirements.txt  run.bat
docs/: ckr_farm_bot_spec.md
docs/superpowers/plans/: 2026-07-04-send-hearts.md
docs/superpowers/specs/: 2026-07-04-send-hearts-design.md
game/assets/: crops_manifest.json
src/ckrbot/: __init__.py  __main__.py  cli.py  logging_setup.py  paths.py
src/ckrbot/adb/: __init__.py  client.py  probe.py
src/ckrbot/capture/: __init__.py  screen.py
src/ckrbot/config/: __init__.py  models.py
src/ckrbot/engine/: __init__.py  engine.py  screen.py  watchdog.py
src/ckrbot/game/: __init__.py  captcha.py  states.py
src/ckrbot/hearts/: sender.py
src/ckrbot/input/: __init__.py  controller.py  minitouch.py
src/ckrbot/macro/: __init__.py  model.py  player.py  recorder.py
src/ckrbot/ui/: __init__.py  panel.py
src/ckrbot/vision/: __init__.py  template.py  vision.py
tests/: test_captcha.py  test_capture.py  test_config.py  test_engine.py  test_hearts_config.py  test_hearts_screens.py  test_hearts_sender.py  test_identify.py  test_macro.py  test_minitouch.py  test_minitouch_swipe.py  test_player.py  test_probe.py  test_screens.py  test_vision.py
tests/fixtures/: getevent_hold_sample.txt  getevent_sample.txt
