[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckrbot"
version = "0.1.0"
description = "CKR Farm Bot — state-machine menu navigation + recorded macro replay on LDPlayer via ADB"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
dependencies = [
    "adbutils>=2.5.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
# OCR is optional (v1 prefers template match — see spec §2)
ocr = ["pytesseract>=0.3.10"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
ckrbot = "ckrbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
